--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,19 +6,33 @@ nav{
     width: 100%;
     height: 60px;
     background: #2a3e50;
-        
+    position: fixed!important;     
 }
+
 .logo{
     color: #fff;
     font-size: 28px;
     line-height: 60px;
     padding-left: 388px;
     float: left;
+    -webkit-animation: comming 2s;
+    -o-animation: ;
+    animation: ;
     
+}
+
+@keyframes comming {
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;    
+    }    
 }
 .menu{
     float: left;
     padding-left: 420px;
+    
 }
 
 .menu li{
@@ -30,13 +44,33 @@ nav{
     text-transform: uppercase;
 }
 
+
+
 .main{
     
     width: 1920px;
     height: 1080px;
     background: url(../img/community_image_1406824206-removebg-preview.png) no-repeat 95% 95%/auto 80% ,url(../img/фон.png) center/cover no-repeat;
+}
+
+.menu li a {
+    transition: all 0.1s;
+    color: white;
+    transform: scale(1);
+    display: inline-block;
+}
+a, a:visited{text-decoration: none; color: white;}
+
+.menu li a:hover {
+    color: orange;
     
 }
+
+.menu li a:active {
+    color: orange;
+    transform: scale(1.1);
+}
+
 .title__container{
     float:left;
     margin: 432px 0px 0px 404px;
@@ -44,6 +78,22 @@ nav{
     text-align: center;
     
 }
+
+.title__container input{
+    transition: all 0.2s;
+    transform:scale(1);
+}
+
+.title__container input:hover{
+    background: #2a3e50;
+    color:white;
+}
+.title__container input:active{
+    transform: scale(1.1);
+}
+
+
+
 .title__container h1{
     font-size: 60px;
     font-weight: bold;
@@ -602,3 +652,6 @@ nav{
     background-color: #2c3e51;
     
 }
+
+
+
